--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,28 +4,27 @@ spring:
   messages:
     encoding: UTF-8
   datasource:
-    url: jdbc:postgresql://localhost:5432/task_manager_ft?currentSchema=public
-    username: task_manager_ft
-    password: testpwd1
-    hikari:
-      minimumIdle: 2
-      maximumPoolSize: 10
+    url: jdbc:h2:file:./data/task-db;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     properties:
       hibernate:
-        jdbc.lob.non_contextual_creation: true
-        default_schema: public
         jdbc:
           time_zone: UTC
     hibernate:
       ddl-auto: validate
-    show-sql: false
+    show-sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
   liquibase:
     enabled: true
     user: ${spring.datasource.username}
     change-log: classpath:db/liquibase-changelog.xml
-    default_schema: public
-    liquibase-schema: public
   jackson:
     serialization:
       FAIL_ON_EMPTY_BEANS: false
@@ -52,6 +51,3 @@ logging:
       boot.autoconfigure: WARN
     net.lbruun.springboot.preliquibase: WARN
     liquibase: WARN
-    
-preliquibase:
-  enabled: true
